clean API for (un)marking actions as news
