# app/api/actions.py
@@ -1,4 +1,4 @@
-from datetime import date
+from datetime import date, datetime
 from flask import jsonify, request
 from marshmallow import Schema, fields
 
@@ -6,10 +6,10 @@ from . import api
 from .auth import token_auth
 from .common import IdParameter, EmptySchema
 from .errors import bad_request
-from ..main.forms import NewActionForm
+from ..main.forms import MarkActionAsNewsForm, NewActionForm
 
 from .. import db
-from ..models import Action, Sample, record_activity
+from ..models import Action, News, Sample, record_activity
 
 
 class SampleParameter(Schema):
@@ -29,6 +29,17 @@ class CreateActionError(Schema):
 class SwapActionOrderContent(Schema):
     actionid = fields.Int()
     swapid = fields.Int()
+
+
+class MarkActionAsNewsContent(Schema):
+    csrf_token = fields.Str()
+    title = fields.Str()
+    expires = fields.Date()
+    actionid = fields.Int()
+
+
+class UnmarkActionAsNewsContent(Schema):
+    actionid = fields.Int()
 
 
 @api.route("/action/<int:sampleid>", methods=["PUT"])
@@ -142,4 +153,101 @@ def swapactionorder():  # TODO: sort out permissions for this (e.g. who has the 
     action.ordnum = swapaction.ordnum
     swapaction.ordnum = ordnum
     db.session.commit()
+    return "", 200
+
+
+@api.route("/action/markasnews", methods=["POST"])
+@token_auth.login_required
+def markasnews():
+    """Mark an action as news.
+    ---
+    post:
+      operationId: markActionAsNews
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema: MarkActionAsNewsContent
+      responses:
+        200:
+          content:
+            application/json:
+              schema: EmptySchema
+          description: Action marked as news
+    """
+    form = MarkActionAsNewsForm()
+    if form.validate_on_submit():
+        # get action from database
+        action = Action.query.get(form.actionid.data)
+        if action is None:
+            return bad_request("Action does not exist")
+
+        # check if action is already marked as news
+        if action.news_id:
+            return bad_request("Action is already marked as news")
+
+        # mark action as news
+        news = News(
+            sender_id=token_auth.current_user().id,
+            sample_id=action.sample_id,
+            title=form.title.data,
+            content="action:{}".format(action.id),
+            published=datetime.today(),
+            expires=form.expires.data,
+        )
+        db.session.add(news)
+        db.session.commit()
+        action.news_id = news.id
+        db.session.commit()
+
+        news.dispatch()
+
+        return "", 200
+    elif form.is_submitted():
+        return jsonify(error={field: errors for field, errors in form.errors.items()}), 400
+
+    return "", 500  # this should never happen
+
+
+@api.route("/action/unmarkasnews", methods=["POST"])
+@token_auth.login_required
+def unmarkasnews():
+    """Unmark an action as news.
+    ---
+    post:
+      operationId: unmarkActionAsNews
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema: UnmarkActionAsNewsContent
+      responses:
+        200:
+          content:
+            application/json:
+              schema: EmptySchema
+          description: Action unmarked as news
+    """
+    action = Action.query.get(request.form.get("actionid"))
+    if action is None:
+        return bad_request("Action does not exist")
+
+    # check if action is really marked as news
+    if not action.news_id:
+        return bad_request("Action is not marked as news")
+
+    if action.news.sender != token_auth.current_user():
+        return bad_request("Only the sender of the news ({}) can unmark this action as news".format(
+                action.news.sender.username
+            ),
+        )
+
+    # by cascade deletion, this will also remove all corresponding items from the linkusernews table
+    db.session.delete(action.news)
+
+    # unmark action as news
+    # TODO: record activity
+    action.news_id = None
+    db.session.commit()
+
     return "", 200
