# app/main/views.py
@@ -472,72 +472,6 @@ def newsample():
     abort(500)  # this should never happen
 
 
-@main.route("/markasnews", methods=["POST"])
-@login_required
-def markasnews():
-    form = MarkActionAsNewsForm()
-    if form.validate_on_submit():
-        # get action from database
-        action = Action.query.get(form.action_id.data)
-        if action is None:
-            return jsonify(code=1, error="Action does not exist")
-
-        # check if action is already marked as news
-        if action.news_id:
-            return jsonify(code=1, error="Action is already marked as news")
-
-        # mark action as news
-        news = News(
-            sender_id=current_user.id,
-            sample_id=action.sample_id,
-            title=form.title.data,
-            content="action:{}".format(action.id),
-            published=datetime.today(),
-            expires=form.expires.data,
-        )
-        db.session.add(news)
-        db.session.commit()
-        action.news_id = news.id
-        db.session.commit()
-
-        news.dispatch()
-
-        return jsonify(code=0)
-    elif form.is_submitted():
-        return jsonify(code=1, error={field: errors for field, errors in form.errors.items()})
-    abort(500)  # this should never happen
-
-
-@main.route("/unmarkasnews", methods=["POST"])
-@login_required
-def unmarkasnews():
-    action = Action.query.get(request.form.get("actionid"))
-    if action is None:
-        return jsonify(code=1, error="Action does not exist")
-
-    # check if action is really marked as news
-    if not action.news_id:
-        return jsonify(code=1, error="Action is not marked as news")
-
-    if action.news.sender != current_user:
-        return jsonify(
-            code=1,
-            error="Only the sender of the news ({}) can unmark this action as news".format(
-                action.news.sender.username
-            ),
-        )
-
-    # by cascade deletion, this will also remove all corresponding items from the linkusernews table
-    db.session.delete(action.news)
-
-    # unmark action as news
-    # TODO: record activity
-    action.news_id = None
-    db.session.commit()
-
-    return jsonify(code=0)
-
-
 @main.route("/plugins/<path:path>")
 @login_required
 def static_file(path):
